# forml

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  NOTICE  README.md  codecov.yml  constraints.txt  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
conf/: config.ini
doc/: CONCEPT.md  DRAFT.md  INSTALL.md  PIPELINE.md
docs/: DRAFT.md  INSTALL.md  LICENSE.rst  _doc.py  _forml.py  application.rst  concept.rst  conf.py  config.rst  dask.rst  dsl.rst  evaluation.rst  examples.rst  faq.rst  feed.rst  filesystem.rst  formalization.rst  graphviz.rst  index.rst  install.rst  installation.rst  interactive.rst  inventory.rst  io.rst  lib.rst  license.rst  lifecycle.rst  operator.rst  pipeline.rst  platform.rst  principles.rst  project.rst  provider.rst  registry.rst  runner.rst  runtime.rst  serving.rst  sink.rst  spelling_wordlist.txt  testing.rst  (+2 more)
docs/_templates/: function.rst  pipeline.rst  provider.rst
docs/dsl/: index.rst  schema.rst
docs/dsl/query/: design.rst  functions.rst  index.rst  syntax.rst
docs/images/: schema-mapping.odg  serving-components.odg
docs/registry/: filesystem.rst  index.rst  mlflow.rst
docs/runner/: index.rst  pyfunc.rst
docs/tutorial/: deploy.rst  develop.rst  evaluation.py  index.rst  research.ipynb  setup.rst  source.py
docs/tutorials/: common.rst  demos.rst  index.rst  titanic.rst
docs/tutorials/titanic/: exploration.ipynb  index.rst  lifecycle.rst  pipeline.rst  serving.rst  setup.rst
docs/workflow/: actor.rst  index.rst  operator.rst  study.rst  task.rst  topology.rst
examples/: 01mini.py  02simple.py  03ensemble.py  04complex.py  05custom.py  __init__.py  ensemble.py  pipeline.py
examples/demos/: 01mini.py  02simple.py  03ensemble.py  04complex.py  05custom.py  __init__.py
examples/project/titanic/: README.md  setup.cfg  setup.py
examples/titanic/: setup.py
examples/tutorial/titanic/: README.md  application.py  setup.py
forml/: __init__.py  _exception.py  _provider.py  error.py  provider.py
forml/application/: __init__.py  _descriptor.py  _encoding.py  _strategy.py
forml/cli/: __init__.py  _api.py  _application.py  _command.py  _model.py  _project.py  _registry.py  forml.py
forml/conf/: __init__.py  config.toml  logging.ini  logging.py
forml/conf/parsed/: __init__.py  provider.py
forml/evaluation/: __init__.py  _api.py  _method.py  _metric.py  _operator.py  _stage.py
forml/extension/: __init__.py
forml/extension/gateway/: rest.py
forml/extension/inventory/: __init__.py
forml/extension/registry/: mlflow.py
forml/extension/runner/: dask.py  graphviz.py  pyfunc.py
forml/flow/: __init__.py  _exception.py  _task.py  error.py  task.py
forml/flow/_code/: compiler.py
forml/flow/_graph/: __init__.py  atomic.py  node.py  port.py  span.py
forml/flow/_suite/: __init__.py  assembly.py  clean.py  member.py
forml/flow/graph/: __init__.py  clean.py  node.py  port.py  view.py
forml/flow/pipeline/: __init__.py  topology.py
forml/io/: __init__.py  layout.py  payload.py
forml/io/_input/: __init__.py  _producer.py  extract.py
forml/io/_output/: __init__.py  _consumer.py  commit.py  publish.py
forml/io/asset/: __init__.py  _access.py  _persistent.py
forml/io/dsl/: __init__.py  _exception.py  error.py  parser.py
forml/io/feed/: __init__.py  extract.py
forml/io/layout/: __init__.py  _codec.py  _external.py  _internal.py
forml/io/sink/: __init__.py  publish.py
forml/lib/application/: __init__.py  _encoding.py  _strategy.py
forml/lib/feed/: __init__.py  static.py
forml/lib/flow/: debug.py
forml/lib/gateway/: __init__.py  rest.py
forml/lib/inventory/: posix.py
forml/lib/pipeline/: debug.py
forml/lib/reader/: __init__.py  presto.py
forml/lib/registry/: __init__.py  filesystem.py  mlflow.py  virtual.py
forml/lib/runner/: __init__.py  dask.py  graphviz.py  pyfunc.py
forml/lib/schema/: __init__.py
forml/lib/sink/: stdout.py
forml/mode/: evaluation.py
forml/pipeline/: debug.py
forml/pipeline/decorate/: __init__.py  _auto.py
forml/pipeline/ensemble/: __init__.py  _folding.py  _stacking.py
forml/project/: __init__.py  _application.py  _body.py  _distribution.py  _importer.py  _product.py  distribution.py  importer.py  product.py
forml/provider/: __init__.py
forml/runtime/: __init__.py  _agent.py  _exception.py  _pad.py  _perf.py  _pseudo.py  facility.py  launcher.py
forml/setup/: __init__.py  _conf.py  _importer.py  _logging.py  _provider.py  _templating.py  config.toml  logging.ini
forml/testing/: __init__.py  _facility.py  _matcher.py  _routine.py  _spec.py  facility.py  routine.py  spec.py
src/forml/: __init__.py  conf.py  error.py  provider.py
tests/: __init__.py  conftest.py  helloworld.py  helloworld_schema.py
tests/application/: test_descriptor.py  test_encoding.py  test_strategy.py
tests/cli/: test_cli.py
tests/conf/: config.ini  config.toml  conftest.py  test_conf.py  test_provider.py  test_section.py
tests/etl/: conftest.py  test_kind.py  test_schema.py  test_statement.py
tests/evaluation/: test_method.py  test_stage.py
tests/extension/: test_extension.py
tests/flow/: __init__.py  conftest.py  test_flow.py  test_segment.py  test_task.py
tests/helloworld/: __4ml__.py  __init__.py  application.py
tests/io/: conftest.py  test_etl.py  test_feed.py  test_layout.py  test_payload.py
tests/project/: component.py  test_application.py  test_body.py  test_component.py  test_distribution.py  test_importer.py  test_product.py  test_project.py
tests/provider/: test_provider.py
tests/runtime/: conftest.py
tests/setup/: conftest.py  test_conf.py  test_importer.py  test_provider.py  test_templating.py
tests/testing/: conftest.py  test_matcher.py  test_routine.py  test_spec.py
tutorials/: config.toml
tutorials/demos/: 03ensemble.py  05custom.py  __init__.py  complex.py  custom.py  d1_mini.py  d2_simple.py  d3_ensemble.py  d4_complex.py  d5_custom.py  ensemble.py  mini.py  simple.py
tutorials/titanic/: README.md  application.py  pyproject.toml  setup.py
(+641 files in other folders)
