# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["setuptools", "wheel", "tomli"]
build-backend = "setuptools.build_meta"


[project]
name = "forml"
dynamic = ["version"]
description = "A development framework and MLOps platform for the lifecycle management of data science projects."
readme = "README.md"
license = {text = "Apache License 2.0"}
requires-python = ">=3.9"
maintainers = [
    {name = "ForML Development Team", email = "info@forml.io"},
]
scripts.forml = "forml.setup:cli"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "click",
    "cloudpickle",
    "jinja2",
    "numpy",
    "packaging>=20.0",
    "pandas",
    "pip",
    "scikit-learn",
    "setuptools",
    "toml",
    "tomli",
]
[project.optional-dependencies]
dask = ["distributed"]
dev = [
    "black[jupyter]",
    "flake8-colors",
    "flake8-bugbear",
    "flake8-typing-imports",
    "isort",
    "pip-tools",
    "pre-commit",
    "pycln",
    "pylint",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist",
    "starlette[full]",
]
docs = [
    "sphinx",
    "sphinx-copybutton",
    "sphinx-immaterial",
    "sphinxcontrib-details-directive",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-spelling",
    "nbsphinx",  # also needs pandoc binary
]
graphviz = ["graphviz"]
mlflow = ["mlflow"]
rest = ["starlette", "uvicorn"]
sql = ["pyhive", "sqlalchemy"]
all = ["forml[dask,graphviz,mlflow,rest,sql]"]

[project.urls]
homepage = "http://forml.io/"
source = "https://github.com/formlio/forml"
documentation = "https://docs.forml.io/"
changelog = "https://github.com/formlio/forml/blob/master/CHANGELOG.md"


[tool.black]
line-length = 120
target-version = ["py39", "py310"]
skip-string-normalization = true


[tool.pycln]
all = true


[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
