# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "forml"
dynamic = ["version"]
description = "A development framework and MLOps platform for the lifecycle management of data science projects."
readme = "README.md"
license = {text = "Apache License 2.0"}
requires-python = ">=3.9"
authors = [
    {name = "ForML Development Team", email = "info@forml.io"},
]
scripts.forml = "forml.setup:cli"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "click",
    "cloudpickle",
    "jinja2",
    "numpy",
    "packaging>=20.0",
    "pandas",
    "pip",
    "scikit-learn",
    "setuptools",
    "toml",
    "tomli",
]
[project.optional-dependencies]
dask = ["distributed"]
dev = [
    "black[jupyter]",
    "flake8-colors",
    "flake8-bugbear",
    "flake8-typing-imports",
    "isort",
    "pip-tools",
    "pre-commit",
    "pycln",
    "pylint",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "starlette[full]",
]
docs = [
    "sphinx",
    "sphinx-copybutton",
    "sphinx-immaterial",
    "sphinxcontrib-details-directive",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-spelling",
    "nbsphinx",  # also needs pandoc binary
    "jupyter-client",
]
graphviz = ["graphviz"]
mlflow = ["mlflow"]
rest = ["starlette", "uvicorn"]
spark = ["pyspark"]
sql = ["duckdb-engine", "pandas[parquet]", "sqlalchemy>=2.0.0"]
all = ["forml[dask,graphviz,mlflow,rest,sql,spark]"]

[project.urls]
Homepage = "http://forml.io/"
Source = "https://github.com/formlio/forml/"
Documentation = "https://docs.forml.io/"
Issues = "https://github.com/formlio/forml/issues/"
Changelog = "https://github.com/formlio/forml/blob/master/CHANGELOG.md"


# == Hatch ====================================================================
# https://hatch.pypa.io/latest/
[tool.hatch.version]
path = "forml/__init__.py"

[tool.hatch.envs.default]
[tool.hatch.envs.default.env-vars]
LC_COLLATE = "en_US.UTF-8"
PIP_CONSTRAINT = "constraints.txt"
[tool.hatch.envs.default.scripts]
clean = "git status --ignored --porcelain | awk '(/^!!/ && !/(.idea|.venv)/){{print $2}}' | xargs -rt rm -rf --"
update = "pip-compile --extra=dev,docs,dask,graphviz,mlflow,rest,sql,spark --output-file={env:PIP_CONSTRAINT} --no-emit-index-url --strip-extras --rebuild --upgrade --resolver=backtracking pyproject.toml"

[tool.hatch.envs.dev]
dependencies = [
    "forml[dev,all]",
]
[tool.hatch.envs.dev.scripts]
lint = [
    "black --check --diff --config=pyproject.toml {args: forml tests}",
    "isort --check --diff --settings-path=pyproject.toml {args: forml tests}",
    "pycln --check --diff --config=pyproject.toml {args: forml tests}",
    "flake8 --config=.flake8 {args: forml tests}",
    "pylint --rcfile=.pylintrc {args: forml tests}",
    "sort --check .gitignore",
]
test = "pytest -rxXs --junitxml=junit.xml --cov-config=pyproject.toml --cov=forml --cov-append --cov-report=term-missing --numprocesses=auto --dist=loadscope {args: forml tests}"
cov = [
    "coverage xml",
    "coverage html",
]
all = [
    "lint",
    "test",
    "cov",
]

[tool.hatch.envs.docs]
dependencies = [
    "forml[docs,all]",
]
[tool.hatch.envs.docs.env-vars]
LC_COLLATE = "en_US.UTF-8"
PIP_CONSTRAINT = "constraints.txt"
SPHINXOPTS = "-W"
[tool.hatch.envs.docs.scripts]
check = [
    "make -C docs linkcheck",
    "make -C docs spelling",
    "sort --check docs/spelling_wordlist.txt",
]

[tool.hatch.envs.tutorials]
dependencies = [
    "forml[dev,dask]",
    "openschema",
]
[tool.hatch.envs.tutorials.env-vars]
LC_COLLATE = "en_US.UTF-8"
PIP_CONSTRAINT = "constraints.txt"
PYTHONPATH = "tutorials:tutorials/titanic"
[tool.hatch.envs.tutorials.scripts]
lint = [
    "black --check --diff --config=pyproject.toml {args: tutorials}",
    "isort --check --diff --settings-path=pyproject.toml {args: tutorials}",
    "pycln --check --diff --config=pyproject.toml {args: tutorials}",
    "flake8 --config=.flake8 {args: tutorials}",
    "pylint --rcfile=.pylintrc {args: tutorials}",
]
test = "forml project --path tutorials/titanic test"
all = [
    "lint",
    "test",
]

[tool.hatch.build.targets.sdist]
include = [
    "/forml",
]

# == Coverage =================================================================
# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
parallel = false

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


# == Black ====================================================================
# https://black.readthedocs.io/en/stable/usage_and_configuration/index.html
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py310"]
skip-string-normalization = true


# == Pycln ====================================================================
# https://hadialqattan.github.io/pycln/#/?id=integrations
[tool.pycln]
all = true


# == Isort ====================================================================
# https://pycqa.github.io/isort/docs/configuration/config_files
[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


# == Pytest ===================================================================
# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
junit_family = "xunit2"
asyncio_mode = "auto"
